# mantis-shrimp

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
docs/: architecture.md
src/algorithms/: gzip_codec.cpp  gzip_codec.hpp  zstd_codec.cpp  zstd_codec.hpp
src/api/: api.cpp
src/archive/: tar_writer.cpp  tar_writer.hpp
src/cli/: main.cpp
src/codecs/: brotli_codec.cpp  brotli_codec.hpp  codec_registry.cpp  gzip_codec.cpp  gzip_codec.hpp  gzip_codec_v2.cpp  gzip_codec_v2.hpp  lz4_codec.cpp  lz4_codec.hpp  xz_codec.cpp  xz_codec.hpp  zip_codec.cpp  zip_codec.hpp  zstd_codec.cpp  zstd_codec.hpp  zstd_codec_v2.cpp  zstd_codec_v2.hpp
src/core/: engine.cpp  engine.hpp  smart_engine.cpp
tests/: test_main.cpp
